[gd_scene load_steps=10 format=3 uid="uid://cahnyk0c57t48"]

[ext_resource type="Script" path="res://enemies/survival_follower_enemy.gd" id="1_yl257"]
[ext_resource type="Resource" uid="uid://4cbhtrrylewu" path="res://enemies/resources/common_xp_drop.tres" id="2_8xlcc"]
[ext_resource type="PackedScene" uid="uid://b113pdpi7a1jh" path="res://enemies/cosmetics/flying_enemy_cosmetics.tscn" id="2_h1uht"]
[ext_resource type="PackedScene" uid="uid://bflrqji1yudcy" path="res://components/health_component.tscn" id="3_183uh"]
[ext_resource type="PackedScene" uid="uid://dek1364s65d8f" path="res://components/hitbox_component.tscn" id="4_8ipih"]
[ext_resource type="PackedScene" uid="uid://crfgc7butkacm" path="res://components/damage_area_component.tscn" id="5_d8iey"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gsbb6"]
radius = 52.0865

[sub_resource type="CircleShape2D" id="CircleShape2D_mtdm8"]
radius = 47.0744

[sub_resource type="CircleShape2D" id="CircleShape2D_lswhv"]
radius = 42.4264

[node name="SurvivalFlyingEnemy" type="CharacterBody2D" node_paths=PackedStringArray("cosmetics", "health_component", "hitbox_component", "damage_area_component")]
collision_layer = 8
collision_mask = 201
motion_mode = 1
script = ExtResource("1_yl257")
max_hp = 100.0
speed = 300.0
xp_drop = ExtResource("2_8xlcc")
area_attack_cooldown_sec = 0.5
area_damage = 5.0
cosmetics = NodePath("FlyingEnemyCosmetics")
health_component = NodePath("HealthComponent")
hitbox_component = NodePath("HitboxComponent")
damage_area_component = NodePath("DamageAreaComponent")

[node name="FlyingEnemyCosmetics" parent="." instance=ExtResource("2_h1uht")]
scale = Vector2(0.6, 0.6)

[node name="HealthComponent" parent="." instance=ExtResource("3_183uh")]
unique_name_in_owner = true

[node name="HitboxComponent" parent="." instance=ExtResource("4_8ipih")]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_gsbb6")
debug_color = Color(0.954313, 0.21537, 0, 0.42)

[node name="DamageAreaComponent" parent="." instance=ExtResource("5_d8iey")]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageAreaComponent"]
shape = SubResource("CircleShape2D_mtdm8")
debug_color = Color(0.547466, 0.403213, 1, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lswhv")

[connection signal="death_finished" from="FlyingEnemyCosmetics" to="." method="_on_cosmetics_death_finished"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="got_hit" from="HitboxComponent" to="." method="_on_hitbox_component_got_hit"]
